--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "devbuild": "webpack --mode development",
         "build": "webpack --mode production",
-        "server": "webpack-dev-server --mode development --open"
+        "server": "webpack-dev-server --mode development --open --hot"
     },
     "author": "EgorK39",
     "license": "ISC",
@@ -15,14 +15,26 @@
         "@babel/core": "^7.21.4",
         "@babel/preset-env": "^7.21.4",
         "@babel/preset-react": "^7.18.6",
+        "@types/google-map-react": "^2.1.7",
+        "@types/react": "^18.0.35",
+        "@types/react-dom": "^18.0.11",
+        "axios": "^1.3.5",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
+        "dotenv": "^16.0.3",
+        "dotenv-webpack": "^8.0.1",
+        "google-map-react": "^2.2.0",
         "html-webpack-plugin": "^5.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "style-loader": "^3.3.2",
+        "ts-dotenv": "^0.9.1",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "url-loader": "^4.1.1",
         "webpack": "^5.78.0",
         "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.13.2"
+        "webpack-dev-server": "^4.13.2",
+        "webpack-hot-middleware": "^2.25.3"
     }
 }
