--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
         "@types/react-dom": "^18.0.11",
         "axios": "^1.3.5",
         "babel-loader": "^9.1.2",
+        "bootstrap": "^5.2.3",
         "css-loader": "^6.7.3",
         "dotenv": "^16.0.3",
         "dotenv-webpack": "^8.0.1",
         "google-map-react": "^2.2.0",
         "html-webpack-plugin": "^5.5.0",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.3",
         "react-dom": "^18.2.0",
         "style-loader": "^3.3.2",
         "ts-dotenv": "^0.9.1",
